[project]
name = "jumpstarter"
version = "0.1.0"
readme = "README.md"
authors = [
  { name = "Miguel Angel Ajo Pelayo", email = "majopela@redhat.com" },
  { name = "Nick Cao", email = "ncao@redhat.com" },
  { name = "Kirk Brauer", email = "kbrauer@hatci.com" },
]
requires-python = ">=3.11,<3.13"
dependencies = [
  "jumpstarter-protocol",
  "click~=8.1.7",
  "pyserial~=3.5",
  "pyusb~=1.2.1",
  "httpx~=0.27.0",
  "pyyaml~=6.0.1",
  "anyio~=4.4.0",
  "aiohttp>=3.9.5",
  "pexpect~=4.9.0",
  "tqdm~=4.66.4",
  "opendal~=0.45.7",
  "pydantic~=2.8.2",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.2",
  "pytest-anyio~=0.0.0",
  "pytest-cov~=5.0.0",
  "ruff~=0.5.5",
  "typos~=1.23.5",
  "sphinx~=7.4.7",
  "myst-parser~=3.0.1",
  "sphinxcontrib-mermaid~=0.9.2",
  "furo~=2024.8.6",
  "esbonio~=0.16.4",
  "sphinx-autobuild~=2024.4.16",
]

[tool.uv.sources]
jumpstarter-protocol = { git = "https://github.com/jumpstarter-dev/jumpstarter-protocol.git", subdirectory = "python" }

[project.optional-dependencies]
rpi = ["gpiozero~=2.0.1"]
dutlink = ["libusb~=1.0.27", "pyudev~=0.24.3"]

[project.scripts]
jmp = "jumpstarter.__main__:main"
j = "jumpstarter.cli.j:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jumpstarter"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "C", "E", "F", "W", "B"]

[tool.typos.default]
locale = "en-us"

[tool.coverage.run]
omit = ["conftest.py", "test_*.py", "*_test.py"]

[tool.pytest.ini_options]
addopts = "--capture=no --verbose --cov --cov-report=html --cov-report=xml"
