[tool.poetry]
name = "jumpstarter-driver-raspberrypi"
version = "0.1.0"
description = ""
authors = [
  "Miguel Angel Ajo Pelayo <majopela@redhat.com>",
  "Nick Cao <ncao@redhat.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gpiozero = "^2.0.1"
jumpstarter = { path = "../.." }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
